--- a/15_Hyper_Parameter_Tuning/Practice.ipynb
+++ b/15_Hyper_Parameter_Tuning/Practice.ipynb
@@ -794,7 +794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using Randomized Search on a small datatset"
+    "# Using Grid Search on a small datatset"
    ]
   },
   {
